--- a/prototype/listProducts.html
+++ b/prototype/listProducts.html
@@ -27,22 +27,22 @@
     	<a href="detailProduct.html"/><img id="1" src="img/dress1.jpg"  /> 
     	<p ><strong> Váy đông xuân</strong>
     		<br/>
-    	<p class="price"> Áo: 879,000 VND</p>
-    	<p class="price"> Túi: 699,000 VND</p>
+    	<p class="price"> Áo: 879,000 $</p>
+    	<p class="price"> Túi: 699,000 $</p>
     </div>
     <div class="col-md-4">
     	<a href="detailProduct.html"/><img id ="2" src="img/dress2.jpg" />
     	<p ><strong> Váy đông xuân,túi đính đá</strong>
     		<br/>
-    	<p class="price"> Váy: 999,000 VND</p>
-    	<p class="price"> Túi: 879,000 VND</p>
+    	<p class="price"> Váy: 999,000 $</p>
+    	<p class="price"> Túi: 879,000 $</p>
     </div>
     <div class="col-md-4">
     	<a href="detailProduct.html"/><img id ="3" src="img/dress3.jpg" />
     	<p ><strong> Váy đông xuân</strong>
     		<br/>
-    	<p class="price"> Áo: 879,000 VND</p>
-    	<p class="price"> Túi: 699,000 VND</p>
+    	<p class="price"> Áo: 879,000 $</p>
+    	<p class="price"> Túi: 699,000 $</p>
     </div>
  </div>
  <div class="row">
@@ -50,23 +50,23 @@
     	<a href="detailProduct.html"/><img id="4" src="img/dress4.jpg"  /> 
     	<p ><strong> Váy đông xuân</strong>
     		<br/>
-    	<p class="price"> Áo: 879,000 VND</p>
-    	<p class="price"> Túi: 699,000 VND</p>
+    	<p class="price"> Áo: 879,000 $</p>
+    	<p class="price"> Túi: 699,000 $</p>
     </div>
     <div class="col-md-4" >
     	<a href="detailProduct.html"/><img id="5" src="img/dress5.jpg"  /> 
     	<p ><strong> Váy đông xuân</strong>
     		<br/>
-    	<p class="price"> Áo: 879,000 VND</p>
-    	<p class="price"> GIẢM CÒN: 499,000 VND</p>
+    	<p class="price"> Áo: 879,000 $</p>
+    	<p class="price"> GIẢM CÒN: 499,000 $</p>
     </div>
 
 	<div class="col-md-4" >
     	<a href="detailProduct.html"/><img id="6" src="img/dress6.jpg"  /> 
     	<p ><strong> Váy đông xuân</strong>
     		<br/>
-    	<p class="price"> 1299,000 VND</p>
-    	<p class="price">GIẢM CÒN: 899,000 VND</p>
+    	<p class="price"> 1299,000 $</p>
+    	<p class="price">GIẢM CÒN: 899,000 $</p>
     </div>
  </div>
  	<div class="trang">
