--- a/prototype/listProducts.html
+++ b/prototype/listProducts.html
@@ -2,7 +2,7 @@
 
 <html lang="vi">
 <head>
-	<title>vay dong xuan</title>
+	<title>Spring Skirt</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<div>
-		<p class= "ketqua ten">"váy đông xuân" 130 KẾT QUẢ </p>
+		<p class= "ketqua ten">"Spring Skirt" 130 KẾT QUẢ </p>
 	 <p class="ketqua sapxep">SORTED BY:</p>
 	 <select class="ketqua list" name="sap xep">
 		<option value="Y">Favorite
@@ -25,48 +25,48 @@
 <div class="row">
     <div class="col-md-4" >
     	<a href="detailProduct.html"/><img id="1" src="img/dress1.jpg"  /> 
-    	<p ><strong> Váy đông xuân</strong>
+    	<p ><strong> Spring Skirt</strong>
     		<br/>
-    	<p class="price"> Áo: 879,000 $</p>
-    	<p class="price"> Túi: 699,000 $</p>
+    	<p class="price"> Coat: 879,000 $</p>
+    	<p class="price"> Bag: 699,000 $</p>
     </div>
     <div class="col-md-4">
     	<a href="detailProduct.html"/><img id ="2" src="img/dress2.jpg" />
-    	<p ><strong> Váy đông xuân,túi đính đá</strong>
+    	<p ><strong> Spring Skirt,túi đính đá</strong>
     		<br/>
-    	<p class="price"> Váy: 999,000 $</p>
-    	<p class="price"> Túi: 879,000 $</p>
+    	<p class="price"> Dress: 999,000 $</p>
+    	<p class="price"> bag: 879,000 $</p>
     </div>
     <div class="col-md-4">
     	<a href="detailProduct.html"/><img id ="3" src="img/dress3.jpg" />
-    	<p ><strong> Váy đông xuân</strong>
+    	<p ><strong> Spring Skirt</strong>
     		<br/>
-    	<p class="price"> Áo: 879,000 $</p>
-    	<p class="price"> Túi: 699,000 $</p>
+    	<p class="price"> Coat: 879,000 $</p>
+    	<p class="price"> Bag: 699,000 $</p>
     </div>
  </div>
  <div class="row">
  	<div class="col-md-4" >
     	<a href="detailProduct.html"/><img id="4" src="img/dress4.jpg"  /> 
-    	<p ><strong> Váy đông xuân</strong>
+    	<p ><strong>Spring Skirt</strong>
     		<br/>
-    	<p class="price"> Áo: 879,000 $</p>
+    	<p class="price"> Coat: 879,000 $</p>
     	<p class="price"> Túi: 699,000 $</p>
     </div>
     <div class="col-md-4" >
     	<a href="detailProduct.html"/><img id="5" src="img/dress5.jpg"  /> 
-    	<p ><strong> Váy đông xuân</strong>
+    	<p ><strong> Spring Skirt</strong>
     		<br/>
-    	<p class="price"> Áo: 879,000 $</p>
-    	<p class="price"> GIẢM CÒN: 499,000 $</p>
+    	<p class="price"> Coat: 879,000 $</p>
+    	<p class="price"> reduced: 499,000 $</p>
     </div>
 
 	<div class="col-md-4" >
     	<a href="detailProduct.html"/><img id="6" src="img/dress6.jpg"  /> 
-    	<p ><strong> Váy đông xuân</strong>
+    	<p ><strong> Spring Skirt</strong>
     		<br/>
     	<p class="price"> 1299,000 $</p>
-    	<p class="price">GIẢM CÒN: 899,000 $</p>
+    	<p class="price">reduced: 899,000 $</p>
     </div>
  </div>
  	<div class="trang">
