--- a/prototype/listProducts.html
+++ b/prototype/listProducts.html
@@ -81,11 +81,11 @@
  	<br/>
  <div class=" row">
  	<div class="col-md-11" >
- 		<img id= "7" src="trademask.png">
+ 		<img id= "7" src="img/trademask.png">
  		
     </div>
     <a href="#" ><div class="col-md-1">
-    	<img id="8" src="len.png">
+    	<img id="8" src="img/len.png">
     </div></a>
  
  </div>
