--- a/prototype/listProducts.html
+++ b/prototype/listProducts.html
@@ -35,7 +35,7 @@
     	<p ><strong> Spring Skirt,túi đính đá</strong>
     		<br/>
     	<p class="price"> Dress: 999,000 $</p>
-    	<p class="price"> bag: 879,000 $</p>
+    	<p class="price"> Bag: 879,000 $</p>
     </div>
     <div class="col-md-4">
     	<a href="detailProduct.html"/><img id ="3" src="img/dress3.jpg" />
@@ -51,14 +51,14 @@
     	<p ><strong>Spring Skirt</strong>
     		<br/>
     	<p class="price"> Coat: 879,000 $</p>
-    	<p class="price"> Túi: 699,000 $</p>
+    	<p class="price"> Bag: 699,000 $</p>
     </div>
     <div class="col-md-4" >
     	<a href="detailProduct.html"/><img id="5" src="img/dress5.jpg"  /> 
     	<p ><strong> Spring Skirt</strong>
     		<br/>
     	<p class="price"> Coat: 879,000 $</p>
-    	<p class="price"> reduced: 499,000 $</p>
+    	<p class="price"> Reduced: 499,000 $</p>
     </div>
 
 	<div class="col-md-4" >
@@ -66,7 +66,7 @@
     	<p ><strong> Spring Skirt</strong>
     		<br/>
     	<p class="price"> 1299,000 $</p>
-    	<p class="price">reduced: 899,000 $</p>
+    	<p class="price">Reduced: 899,000 $</p>
     </div>
  </div>
  	<div class="trang">
