--- a/prototype/personal.html
+++ b/prototype/personal.html
@@ -15,9 +15,9 @@
 				<img id="profile-picture" src="img/profile-picture.jpg">
 			</div>
 			<div class= "link">
-				<div id="link"><a href="" onclick="">Profile</a></div>
-				<div id="link"><a href="" onclick="">My bag</a></div>
-				<div id="link"><a href="" onclick="">My favorite</a></div>
+				<a id="link1" href="#" onclick="">Profile</a>
+				<a id="link2" href="#" onclick="">My bag</a>
+				<a id="link3" href="#" onclick="">My favorite</a>
 			</div>
 		</div>
 		
@@ -51,14 +51,11 @@
 			</div>
 				</br></br>
 
-				<div class="col-md-12">
+				<div class="">
 					<a class="btn" href="">Edit</a>
-				</div>
-				
-				
-			</div>
-			
+				</div>	
+			</div>	
 		</div>		
 	</div>
 </body>
-</html>
+</html> 
