--- a/prototype/Mybag.html
+++ b/prototype/Mybag.html
@@ -15,9 +15,9 @@
 				<img id="profile-picture" src="img/profile-picture.jpg">
 			</div>
 			<div class= "link">
-				<div id="link"><a href="" onclick="">Profile</a></div>
-				<div id="link"><a href="" onclick="">My bag</a></div>
-				<div id="link"><a href="" onclick="">My favorite</a></div>
+				<a id="link1" href="#" onclick="">Profile</a>
+				<a id="link2" href="#" onclick="">My bag</a>
+				<a id="link3" href="#" onclick="">My favorite</a>
 			</div>
 		</div>
 		
@@ -25,7 +25,7 @@
 			<div class="row">
 				<div class="col-md-3">
 				<a href="">
-					<img id="clothe" src="img/kaki-mangto.jpg"></div>
+					<img id="clothe1" src="img/kaki-mangto.jpg"></div>
 				</a>
 				<div class="col-md-3">
 				<a id="name" href=""><strong>Kaki Mangto Coat</strong></a></br>
@@ -43,7 +43,7 @@
 			<div class="row">
 				<div class="col-md-3">
 				<a href=""> 
-					<img id="clothe" src="img/kaki-blaze.jpg"></div>
+					<img id="clothe2" src="img/kaki-blaze.jpg"></div>
 				</a>
 				<div class="col-md-3">
 				<a id="name" href=""><strong>Kaki Blaze Coat</strong></a></br>
