--- a/prototype/header.html
+++ b/prototype/header.html
@@ -18,7 +18,7 @@
 <body>
 	<header>
 		<div class="user">
-			<span><a href="login-signup.html">Login/SignUp</a></span>
+			<span><a href="login-signup.html" id="loginform">Login</a> | <a href="login-signup.html" id="registerform">Register</a></span>
 			<a href="" class="hvr-icon-bounce glyphicon glyphicon-shopping-cart">
 			</a>
 		</div>
