--- a/prototype/index.html
+++ b/prototype/index.html
@@ -7,15 +7,22 @@
 	<link rel="stylesheet" type="text/css" href="lib/bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="lib/bootstrap/css/bootstrap-theme.min.css">
 	<link rel="stylesheet" type="text/css" href="css/index.css">
+	<link rel="stylesheet" type="text/css" href="css/header.css">
 	<link rel="stylesheet" href="lib/font-awesome/css/font-awesome.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Mountains+of+Christmas' rel='stylesheet' type='text/css'>
-
-	<!-- Latest compiled and minified CSS 
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">-->
+	<link href='https://fonts.googleapis.com/css?family=Exo' rel='stylesheet' type='text/css'>
+	<script src="js/jquery.min.js"></script>
+	<script src="lib/bootstrap/js/bootstrap.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script src="js/index.js"></script>
 </head>
 <body>
 	<header>
-		<span class="user"><a href="login-signup.html">Login/SignUp</a></span>
+		<div class="user">
+			<span><a href="login-signup.html">Login/SignUp</a></span>
+			<a href="" class="hvr-icon-bounce glyphicon glyphicon-shopping-cart">
+			</a>
+		</div>
 		<div class="logo"><h1>STORM</h1></div>
 		<nav class="navbar">
 	      <ul class="nav navbar-nav">
@@ -28,7 +35,7 @@
 	        <li><a href="#">Sale</a></li>
 	        <li>
 	        	 <div class="form-group has-feedback">
-		            <input type="text" id="name"  class="form-control">
+		            <input type="text" id="name"  placeholder="Search..." class="form-control">
 		            <span class="glyphicon glyphicon-search form-control-feedback"></span>
        			 </div>
 	        </li>
@@ -37,25 +44,87 @@
 	</header>
 
 	<div class="content">
-		<div class="img-big">
-			<img src="img/home1.jpg">
+		<!--SLIDE -->
+		<div class="container">
+		  <br>
+		  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+		    <!-- Indicators -->
+		    <ol class="carousel-indicators">
+		      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+		      <li data-target="#myCarousel" data-slide-to="1"></li>
+		      <li data-target="#myCarousel" data-slide-to="2"></li>
+		    </ol>
+
+		    <!-- Wrapper for slides -->
+		    <div class="carousel-inner" role="listbox">
+		      <div class="item active">
+		        <img src="img/home/slider/slide1.jpg" alt="Slide1" >
+		      </div>
+
+		      <div class="item">
+		         <img src="img/home/slider/slide2.jpg" alt="Slide2" >
+		      </div>
+		    
+		      <div class="item">
+		         <img src="img/home/slider/slide3.jpg" alt="Slide3" >
+		      </div>
+
+		    <!-- Left and right controls -->
+		    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+		      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+		      <span class="sr-only">Previous</span>
+		    </a>
+		    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+		      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+		      <span class="sr-only">Next</span>
+		    </a>
+		  </div>
 		</div>
-		<div class="img-small">
-			<img src="img/home2.jpg">
-			<img src="img/home3.jpg">
+		</div>
+		<!--End slide -->
+
+		<!-- Caption -->
+		<div class="title">
+			<h1>DO YOU LIKE?...</h1>
+		</div>
+		<!-- Intro type product -->
+		<div class="row introType">
+			<div class="col-md-8">
+				<div class="row"> 
+					<div class="col-md-7">
+						<a id="link-image" href=""><img class="hvr-bounce-to-right" src="img/home/type/top.jpg"></a>
+						<button class="btn btn-default type-button">TOP</button>
+					</div>
+					<div class="col-md-5">
+						<a id="link-image" href=""><img src="img/home/type/supercheap.jpg"></a>
+						<button class="btn btn-default type-button">CHEAP</button>
+					
+					</div>
+				</div>
+				<div class="row play">
+					<a id="link-image" href=""><img src="img/home/type/player.jpg"></a>
+					<button class="btn btn-default type-button play-button">PLAY</button>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<a id="link-image" href=""><img src="img/home/type/Art.jpg"></a>
+				<button class="btn btn-default type-button">ART</button>
+			</div>
+			
 		</div>
 
 	</div>
+	
 
 	<footer>
 		<div class="row">
-			<div class="col-md-4">Contact</div>
-			<div class="col-md-4">Shipping Services</div>
-			<div class="col-md-4">
-				<i class="fa fa-facebook-square"></i>
-				<i class="fa fa-twitter-square"></i>
-				<i class="fa fa-google-plus-square"></i>
-				<i class="fa fa-rss-square"></i>
+			<div class="col-md-4"><a href="">Contact</a></div>
+			<div class="col-md-4 shipping"><a href="">Shipping Services</a></div>
+			<div class="col-md-4 social">
+				<a href=""><i class="fa fa-facebook"></i></a>
+				<a href=""><i class="fa fa-twitter"></i></a>
+				<a href=""><i class="fa fa-google-plus"></i></a>
+				<a href=""><i class="fa fa-rss"></i></a>
 			</div>
 
 		</div>
