--- a/prototype/listProducts.html
+++ b/prototype/listProducts.html
@@ -32,7 +32,7 @@
     </div>
     <div class="col-md-4">
     	<a href="detailProduct.html"/><img id ="2" src="img/dress2.jpg" />
-    	<p ><strong> Spring Skirt,túi đính đá</strong>
+    	<p ><strong> Spring Skirt,bag fashion</strong>
     		<br/>
     	<p class="price"> Dress: 999,000 $</p>
     	<p class="price"> Bag: 879,000 $</p>
@@ -69,7 +69,7 @@
     	<p class="price">Reduced: 899,000 $</p>
     </div>
  </div>
- 	<div class="trang">
+ 	<div class="button">
  		<a href="timkiem.html" > <button>1</button> </a>
  		<a href="timkiem.html" > <button>2</button> </a>
  		<a href="timkiem.html" > <button>3</button> </a>
