--- a/prototype/login-signup.html
+++ b/prototype/login-signup.html
@@ -56,7 +56,7 @@
 </div>
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
-        <script src="index.js"></script>
+        <script src="jslogin.js"></script>
 
     
     
