--- a/prototype/personal.html
+++ b/prototype/personal.html
@@ -12,7 +12,7 @@
 		<div class="col-md-3 profile">				
 			<div class="border">
 				<p id="username"><strong>trang2uet</strong></p>
-				<img id="profile-picture" src="img/profile-picture.jpg">
+				<img id="profile-picture" src="img/personal/avatar.png">
 			</div>
 			<div class= "link">
 				<a id="link1" href="#" onclick="">Profile</a>
