--- a/prototype/Mybag.html
+++ b/prototype/Mybag.html
@@ -2,63 +2,151 @@
 <html>
 <head>
 	<title>My Bag</title>
-	<script src= "http://code.jquery.com/jquery-2.1.4.js"></script>
-	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+	<meta charset="utf-8">
+  	<meta name="viewport" content="width=device-width, initial-scale=1">
+  	<link rel="stylesheet" type="text/css" href="lib/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="lib/bootstrap/css/bootstrap-theme.min.css">
+	<link rel="stylesheet" type="text/css" href="css/header.css">
+	<link rel="stylesheet" href="lib/font-awesome/css/font-awesome.min.css">
+	<link href='https://fonts.googleapis.com/css?family=Mountains+of+Christmas' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Exo' rel='stylesheet' type='text/css'>
+	<script src="js/jquery.min.js"></script>
+	<script src="lib/bootstrap/js/bootstrap.min.js"></script>
+  	<script src="js/mybag.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/mybag.css">
 </head>
 <body>	
-	<div class="row container">
-		<div class="col-md-3 profile">				
-			<div class="border">
-				<p id="username"><strong>trang2uet</strong></p>
-				<img id="profile-picture" src="img/profile-picture.jpg">
-			</div>
-			<div class= "link">
-				<a id="link1" href="#" onclick="">Profile</a>
-				<a id="link2" href="#" onclick="">My bag</a>
-				<a id="link3" href="#" onclick="">My favorite</a>
-			</div>
+	<header>
+		<div class="user">
+			<span><a href="login-signup.html">Login/SignUp</a></span>
+			<a href="" class="hvr-icon-bounce glyphicon glyphicon-shopping-cart">
+			</a>
 		</div>
-		
-		<div class="col-md-9 infor"> 
-			<div class="row">
-				<div class="col-md-3">
-				<a href="">
-					<img id="clothe1" src="img/kaki-mangto.jpg"></div>
-				</a>
-				<div class="col-md-3">
-				<a id="name" href=""><strong>Kaki Mangto Coat</strong></a></br>
-				100$</br>
-				In Stock
+		<div class="logo"><h1>STORM</h1></div>
+		<nav class="navbar">
+	      <ul class="nav navbar-nav">
+	        <li class="active"><a href="index.html">Home</a></li>
+	        <li><a href="#">New</a></li>
+	        <li><a href="#">Hot</a></li>
+	        <li><a href="#">Clothes</a></li>
+	        <li><a href="#">Dress</a></li>
+	        <li><a href="#">Shoes</a></li>
+	        <li><a href="#">Sale</a></li>
+	        <li>
+	        	 <div class="form-group has-feedback">
+		            <input type="text" id="name"  placeholder="Search..." class="form-control">
+		            <span class="glyphicon glyphicon-search form-control-feedback"></span>
+       			 </div>
+	        </li>
+	      </ul>
+		</nav>
+	</header>
+	
+	<div class="content">
+		<div class="row">
+			<div class="col-md-3 profile">				
+				<div class="border">
+					<p id="username"><strong>abcxx</strong></p>
+					<img id="profile-picture" src="img/personal/avatar.png">
 				</div>
-				<div class="col-md-3">
-					<a class="btn " href="">Details</a>
-				</div>
-				<div class="col-md-3">
-					<a class="btn w3-margin-bottom" href="">Buy Now</a>
+				<div class= "link">
+					<a id="link1" href="personal.html" onclick="">Profile</a>
+					<a id="linkactive" href="Mybag.html" onclick="">My bag</a>
+					<a id="link3" href="#" onclick="">My favorite</a>
 				</div>
 			</div>
-			<hr>
-			<div class="row">
-				<div class="col-md-3">
-				<a href=""> 
-					<img id="clothe2" src="img/kaki-blaze.jpg"></div>
-				</a>
-				<div class="col-md-3">
-				<a id="name" href=""><strong>Kaki Blaze Coat</strong></a></br>
-				250$</br>
-				Sold Out
+			
+			<div class="col-md-9 infor">
+				<h5 class="countItems"></h5> 
+				<div class="row list-item">
+					<div class="col-md-3">
+						<a href=""><img id="clothe1" src="img/personal/kaki-mangto.jpg"></a>
+					</div>
+					<div class="col-md-3">
+						<a id="name" href=""><strong>Kaki Mangto Coat</strong></a>
+						<p class="price">100$</p>
+						<p class="state">In Stock</p>
+					</div>
+					<div class="col-md-2">
+						<a class="btn " href="">Details</a>
+					</div>
+					<div class="col-md-2">
+						<a class="btn w3-margin-bottom" href="">Buy Now</a>
+					</div>
+					<div class="col-md-2 icon">
+						<a href=""><i class="fa fa-trash-o"></i></a>
+					</div>
+					<hr>
 				</div>
-				<div class="col-md-3">
-					<a class="btn w3-margin-bottom" href="">Details</a>
+
+				<div class="row list-item">
+					<div class="col-md-3">
+						<a href=""> <img id="clothe2" src="img/personal/kaki-blaze.jpg"></a>
+					</div>
+					<div class="col-md-3">
+						<a id="name" href=""><strong>Kaki Blaze Coat</strong></a>
+						<p class="price">250$</p>
+						<p class="state">Sold Out</p>
+					</div>
+					<div class="col-md-2">
+						<a class="btn w3-margin-bottom" href="">Details</a>
+					</div>
+					<div class="col-md-2">
+						<a class="btn w3-margin-bottom" href="">Buy Now</a>
+					</div>
+					<div class="col-md-2 icon">
+						<a href="#"><i class="fa fa-trash-o"></i></a>
+					</div>
+					<hr>
 				</div>
-				<div class="col-md-3">
-					<a class="btn w3-margin-bottom" href="">Buy Now</a>
+
+				<!--Copy -->
+				<div class="row list-item">
+					<div class="col-md-3">
+						<a href=""><img id="clothe1" src="img/personal/kaki-mangto.jpg"></a>
+					</div>
+					<div class="col-md-3">
+						<a id="name" href=""><strong>Kaki Mangto Coat</strong></a>
+						<p class="price">100$</p>
+						<p class="state">In Stock</p>
+					</div>
+					<div class="col-md-2">
+						<a class="btn " href="">Details</a>
+					</div>
+					<div class="col-md-2">
+						<a class="btn w3-margin-bottom" href="">Buy Now</a>
+					</div>
+					<div class="col-md-2 icon">
+						<a href=""><i class="fa fa-trash-o"></i></a>
+					</div>
+					<hr>
 				</div>
-				<div class="col-md-3"></div>
-			</div>
-		</div>		
+				
+				<div class="row list-item">
+					<div class="col-md-3">
+						<a href=""> <img id="clothe2" src="img/personal/kaki-blaze.jpg"></a>
+					</div>
+					<div class="col-md-3">
+						<a id="name" href=""><strong>Kaki Blaze Coat</strong></a>
+						<p class="price">250$</p>
+						<p class="state">Sold Out</p>
+					</div>
+					<div class="col-md-2">
+						<a class="btn w3-margin-bottom" href="">Details</a>
+					</div>
+					<div class="col-md-2">
+						<a class="btn w3-margin-bottom" href="">Buy Now</a>
+					</div>
+					<div class="col-md-2 icon">
+						<a href=""><i class="fa fa-trash-o"></i></a>
+					</div>
+					<hr>
+				</div>
+
+
+
+			</div>				
+		</div>
 	</div>
 </body>
 </html>
