--- a/prototype/index.html
+++ b/prototype/index.html
@@ -13,14 +13,13 @@
 	<link href='https://fonts.googleapis.com/css?family=Exo' rel='stylesheet' type='text/css'>
 	<script src="js/jquery.min.js"></script>
 	<script src="lib/bootstrap/js/bootstrap.min.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-  <script src="js/index.js"></script>
+  	<script src="js/index.js"></script>
 </head>
 <body>
 	<header>
 		<div class="user">
 			<span><a href="login-signup.html">Login/SignUp</a></span>
-			<a href="" class="hvr-icon-bounce glyphicon glyphicon-shopping-cart">
+			<a href="Mybag.html" class="hvr-icon-bounce glyphicon glyphicon-shopping-cart">
 			</a>
 		</div>
 		<div class="logo"><h1>STORM</h1></div>
