--- a/prototype/header.html
+++ b/prototype/header.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Welcome to Storm</title>
+	<title>Storm</title>
 	<meta charset="utf-8">
   	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="lib/bootstrap/css/bootstrap.min.css">
@@ -18,13 +18,13 @@
 	<header>
 		<div class="user">
 			<span><a href="login-signup.html" id="loginform">Login</a> | <a href="login-signup.html" id="registerform">Register</a></span>
-			<a href="" class="hvr-icon-bounce glyphicon glyphicon-shopping-cart">
+			<a href="Mybag.html" class="hvr-icon-bounce glyphicon glyphicon-shopping-cart">
 			</a>
 		</div>
 		<div class="logo"><h1>STORM</h1></div>
 		<nav class="navbar">
 	      <ul class="nav navbar-nav">
-	        <li class="active"><a href="#">Home</a></li>
+	        <li class="active"><a href="index.html">Home</a></li>
 	        <li><a href="#">New</a></li>
 	        <li><a href="#">Hot</a></li>
 	        <li><a href="#">Clothes</a></li>
