add header to body of html

--- a/prototype/listProducts.html
+++ b/prototype/listProducts.html
@@ -3,12 +3,45 @@
 <html lang="vi">
 <head>
 	<title>Spring Skirt</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+	<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="lib/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/listProducts.css">
+    <link rel="stylesheet" type="text/css" href="css/header.css">
+    <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Mountains+of+Christmas' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Exo' rel='stylesheet' type='text/css'>
+    <script src="js/jquery.min.js"></script>
+    <script src="lib/bootstrap/js/bootstrap.min.js"></script>
+
 </head>
 <body>
+    <header>
+        <div class="user">
+            <span><a href="login-signup.html" id="loginform">Login</a> | <a href="login-signup.html" id="registerform">Register</a></span>
+            <a href="Mybag.html" class="hvr-icon-bounce glyphicon glyphicon-shopping-cart">
+            </a>
+        </div>
+        <div class="logo"><a href="index.html"><h1>STORM</h1></a></div>
+        <nav class="navbar">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="#">New</a></li>
+            <li><a href="#">Hot</a></li>
+            <li><a href="#">Clothes</a></li>
+            <li><a href="#">Dress</a></li>
+            <li><a href="#">Shoes</a></li>
+            <li><a href="#">Sale</a></li>
+            <li>
+                 <div class="form-group has-feedback">
+                    <input type="text" id="name"  placeholder="Search..." class="form-control">
+                    <span class="glyphicon glyphicon-search form-control-feedback"></span>
+                 </div>
+            </li>
+          </ul>
+        </nav>
+    </header>
+
 	<div>
 		<p class= "ketqua ten">"Spring Skirt" 130 KẾT QUẢ </p>
 	 <p class="ketqua sapxep">SORTED BY:</p>
