--- a/prototype/Mybag.html
+++ b/prototype/Mybag.html
@@ -22,7 +22,7 @@
 			<a href="" class="hvr-icon-bounce glyphicon glyphicon-shopping-cart">
 			</a>
 		</div>
-		<div class="logo"><h1>STORM</h1></div>
+		<div class="logo"><a href="index.html"><h1>STORM</h1></a></div>
 		<nav class="navbar">
 	      <ul class="nav navbar-nav">
 	        <li class="active"><a href="index.html">Home</a></li>
