change icon bag

--- a/prototype/detailProduct.html
+++ b/prototype/detailProduct.html
@@ -91,8 +91,8 @@
 		
 	
 		 <b class="thanh" >Home</b></a> <b class="thanh"> > </b><b class="thanh">Jacket</b></a>
-		<br style="margin-top: 100px">
-		<p style="padding-top:50px"></p>
+		<br style="margin-top: 20px">
+		<p style="padding-top:20px"></p>
 		<div class="container-fluid">
   
 		<div class="row">
@@ -196,8 +196,8 @@
 				<p class="money"> $50</p>
 				<p class="fontword"> Status: Sold out </p>
 				<p class="fontword"> 126 people bought</p>
-				<p style ="padding-top:60px"></p>
-				<a href = "Order.html"  style="text-decoration: none"> <div id="wraporder">ORDER</div></a>
+				<p style ="padding-top:45px"></p>
+				<div id="order"><a href = "Order.html"  style="text-decoration: none"> <div id="wraporder">ORDER</div></a></div>
 			</div>
 			<div class="col-sm-4" >
 				
