--- a/prototype/personal.html
+++ b/prototype/personal.html
@@ -19,6 +19,9 @@
 	<link rel="stylesheet" type="text/css" href="css/mybag.css">
 </head>
 <body>	
+<!-- <<<<<<< HEAD
+	
+======= -->
 	<header>
 		<div class="user">
 			<span><a href="login-signup.html" id="loginform">Login</a> | <a href="login-signup.html" id="registerform">Register</a></span>
@@ -56,40 +59,43 @@
 					<a id="linkactive" href="personal.html" onclick="">Profile</a>
 					<a id="link2" href="Mybag.html" onclick="">My bag</a>
 					<a id="link3" href="#" onclick="">My favorite</a>
+<!-- >>>>>>> origin/master -->
 				</div>
 			</div>
-			
+<!-- <<<<<<< HEAD
+ -->		</br></br>			
 			<div class="col-md-9 infor inforprofile">
 				<div class="row">
 					<div class="col-md-3">
-						<a id="name" href=""><strong>User Name:</strong></a>
+						<a  id="name" class = "font" href="#"><strong>User Name:</strong></a>
 					</div>
 					<div class="col-md-9 edit">Nguyen Thi Trang</div>
 				</div>
 		
 				<div class="row">
 					<div class="col-md-3">
-						<a id="email" href=""><strong>Email:</strong></a>
+						<a id="email" class = "font" href="#"><strong>Email:</strong></a>
 					</div>
 					<div class="col-md-9 edit">trangabc@gmail.com</div>
 				</div>
 					
 				<div class="row">
 					<div class="col-md-3">
-						<a id="phone" href=""><strong>Phone Number:</strong></a>
+						<a id="phone" class ="font" href="#"><strong>Phone Number:</strong></a>
 					</div>
 					<div class="col-md-9 edit">1234567890</div>
 				</div>
 					
 				<div class="row">
 					<div class="col-md-3">
-						<a id="adress" href=""><strong>Adress:</strong></a>
+						<a id="adress" class = "font" href="#"><strong>Adress:</strong></a>
 					</div>
 					<div class="col-md-9 edit">Ha Noi, Viet Nam</div>
 				</div>
 				<div class="editButton">
-					<a class="btn" href=""><i class="fa fa-pencil-square-o"></i>Edit Profile</a>
+					<a class="btn" href="#"><i class="fa fa-pencil-square-o"></i>Edit Profile</a>
 				</div>	
+<!-- >>>>>> origin/master -->
 			</div>	
 		</div>		
 	</div>				
