--- a/prototype/detailProduct.html
+++ b/prototype/detailProduct.html
@@ -90,7 +90,7 @@
 	<div id="main">
 		
 	
-		 <b class="thanh" >Home</b></a> <b class="thanh"> > </b><b class="thanh">Jacket</b></a>
+		 <b class="bar" >Home</b></a> <b class="bar"> > </b><b class="bar">Jacket</b></a>
 		<br style="margin-top: 20px">
 		<p style="padding-top:20px"></p>
 		<div class="container-fluid">
@@ -104,31 +104,19 @@
 					<ol class="carousel-indicators">
 					  <li class="item1 active"></li>
 					  <li class="item2"></li>
-					  <li class="item3"></li>
-					  <li class="item4"></li>
-					  <li class="item5"></li>
-					  <li class="item6"></li> 
+					  <li class="item3"></li> 
 					</ol>
 
 					<!-- Wrapper for slides -->
 					<div class="carousel-inner" role="listbox">
 						<div class="item active" >
-							<img src="img/details/Anh7.png" style ="width:500px; height:600px">
+							<img src="img/details/Anh1.png">
 						</div>
 						<div class="item" >
-							<img src="img/details/Anh2.png" style ="width:500px; height:600px">
+							<img src="img/details/Anh2.png">
 						</div>
 						<div class="item">
-							<img src="img/details/Anh3.png" style ="width:500px; height:600px">
-						</div>
-						<div class="item" style ="width:500px; height:600px">
-							<img src="img/details/Anh4.png" style ="width:500px; height:600px">
-						</div>
-						<div class="item">
-							<img src="img/details/Anh8.png" style ="width:500px; height:600px">
-						</div>
-						<div class="item">
-							<img src="img/details/Anh9.png" style ="width:500px; height:600px">
+							<img src="img/details/Anh3.png">
 						</div>
 					</div>
 
@@ -146,8 +134,6 @@
 
 				<script>
 				$(document).ready(function(){
-					
-					
 					// Enable Carousel Indicators
 					$(".item1").click(function(){
 						$("#myCarousel").carousel(0);
@@ -157,15 +143,6 @@
 					});
 					$(".item3").click(function(){
 						$("#myCarousel").carousel(2);
-					});
-					$(".item4").click(function(){
-						$("#myCarousel").carousel(3);
-					});
-					 $(".item5").click(function(){
-						$("#myCarousel").carousel(4);
-					});
-					 $(".item6").click(function(){
-						$("#myCarousel").carousel(5);
 					});
 					// Enable Carousel Controls
 					$(".left").click(function(){
@@ -265,12 +242,9 @@
 	
 	<div class="row">
 		<div class="col-md-8">
-			<img class="photodetails" src="img/details/Anh2.png">
+			<img class="photodetails" src="img/details/Anh5.png">
+			<img class="photodetails" src="img/details/Anh6.png">
 			<img class="photodetails" src="img/details/Anh7.png">
-			<img class="photodetails" src="img/details/Anh9.png">
-			<img class="photodetails" src="img/details/Anh3.png">
-			<img class="photodetails" src="img/details/Anh4.png">
-			
 			<a href = "#danhgia">
 		</div>
 		<div class="col-md-4">
@@ -295,22 +269,6 @@
 			<div id="wrapphoto">
 				<img class="photosame" src="img/details/same6.png">
 				<p class="name">Nice Overcoat Red </p>
-			</div>
-			<div id="wrapphoto">
-				<img class="photosame" src="img/details/same7.png">
-				<p class="name">Double jacket</p>
-			</div>
-			<div id="wrapphoto">
-				<img class="photosame" src="img/details/same8.png">
-				<p class="name">Overcoat Black</p>
-			</div>
-			<div id="wrapphoto">
-				<img class="photosame" src="img/details/same9.png">
-				<p class="name">Overcoat Pink</p>
-			</div>
-			<div id="wrapphoto">
-				<img class="photosame" src="img/details/same10.png">
-				<p class="name">Overcoat</p>
 			</div>
 			<div id="wrapphoto">
 				<img class="photosame" src="img/details/same11.png">
