--- a/prototype/index.html
+++ b/prototype/index.html
@@ -8,20 +8,59 @@
 	<link rel="stylesheet" type="text/css" href="lib/bootstrap/css/bootstrap-theme.min.css">
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 	<link rel="stylesheet" type="text/css" href="css/header.css">
+	<link rel="stylesheet" type="text/css" href="css/stylelogin.css">
 	<link rel="stylesheet" href="lib/font-awesome/css/font-awesome.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Mountains+of+Christmas' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Exo' rel='stylesheet' type='text/css'>
 	<script src="js/jquery.min.js"></script>
 	<script src="lib/bootstrap/js/bootstrap.min.js"></script>
   	<script src="js/index.js"></script>
+  	<script src="js/jslogin.js"></script>
+
 </head>
 <body>
 	<header>
 		<div class="user">
-			<span><a href="login-signup.html" id="loginform">Login</a> | <a href="login-signup.html" id="registerform">Register</a></span>
+			<span><a href="" id="loginform">Login</a> | <a href="" id="registerform">Register</a></span>
 			<a href="Mybag.html" class="hvr-icon-bounce glyphicon glyphicon-shopping-cart">
 			</a>
 		</div>
+		<!-- Login form -->
+		 <div class="login">
+      <div class="arrow-up1"></div>
+      <div class="formholder">
+        <div class="randompad">
+             <label name="username">Username</label>
+             <input type="text"/>
+             <label name="password">Password</label>
+             <input type="password" />
+             <input type="submit" value="Login" />
+ 
+           
+        </div>
+      </div>
+      </div>
+
+      <!--Register Form -->
+      <div class="register">
+      <div class="arrow-up2"></div>
+      <div class="formregister">
+        <div class="randompad">
+             <label name="email">Email</label>
+             <input type="email" placeholder="example@example.com" />
+             <label name="username">Username</label>
+             <input type="text" />
+             <label name="password">Password</label>
+             <input type="password" />
+             <input type="submit" value="Login" />
+ 
+        </div>
+      </div>
+    </div>
+     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+
+        <script src="js/jslogin.js"></script>
+
 		<div class="logo"><a href="index.html"><h1>STORM</h1></a></div>
 		<nav class="navbar">
 	      <ul class="nav navbar-nav">
@@ -41,7 +80,7 @@
 	      </ul>
 		</nav>
 	</header>
-
+	
 	<div class="content">
 		<!--SLIDE -->
 		<div class="container">
@@ -113,7 +152,7 @@
 		</div>
 
 	</div>
-	
+
 
 	<footer>
 		<div class="row">
