--- a/prototype/Mybag.html
+++ b/prototype/Mybag.html
@@ -68,10 +68,10 @@
 						<p class="state">In Stock</p>
 					</div>
 					<div class="col-md-2">
-						<a class="btn " href="">Details</a>
+						<a class="btn " href="detailProduct.html">Details</a>
 					</div>
 					<div class="col-md-2">
-						<a class="btn w3-margin-bottom" href="">Buy Now</a>
+						<a class="btn w3-margin-bottom" href="order.html">Buy Now</a>
 					</div>
 					<div class="col-md-2 icon">
 						<a href=""><i class="fa fa-trash-o"></i></a>
@@ -89,10 +89,10 @@
 						<p class="state">Sold Out</p>
 					</div>
 					<div class="col-md-2">
-						<a class="btn w3-margin-bottom" href="">Details</a>
+						<a class="btn w3-margin-bottom" href="detailProduct.html">Details</a>
 					</div>
 					<div class="col-md-2">
-						<a class="btn w3-margin-bottom" href="">Buy Now</a>
+						<a class="btn w3-margin-bottom" href="order.html">Buy Now</a>
 					</div>
 					<div class="col-md-2 icon">
 						<a href="#"><i class="fa fa-trash-o"></i></a>
@@ -111,17 +111,17 @@
 						<p class="state">In Stock</p>
 					</div>
 					<div class="col-md-2">
-						<a class="btn " href="">Details</a>
+						<a class="btn " href="detailProduct.html">Details</a>
 					</div>
 					<div class="col-md-2">
-						<a class="btn w3-margin-bottom" href="">Buy Now</a>
+						<a class="btn w3-margin-bottom" href="order.html">Buy Now</a>
 					</div>
 					<div class="col-md-2 icon">
 						<a href=""><i class="fa fa-trash-o"></i></a>
 					</div>
 					<hr>
 				</div>
-				
+
 				<div class="row list-item">
 					<div class="col-md-3">
 						<a href=""> <img id="clothe2" src="img/personal/kaki-blaze.jpg"></a>
@@ -132,13 +132,13 @@
 						<p class="state">Sold Out</p>
 					</div>
 					<div class="col-md-2">
-						<a class="btn w3-margin-bottom" href="">Details</a>
+						<a class="btn w3-margin-bottom" href="detailProduct.html">Details</a>
 					</div>
 					<div class="col-md-2">
-						<a class="btn w3-margin-bottom" href="">Buy Now</a>
+						<a class="btn w3-margin-bottom" href="order.html">Buy Now</a>
 					</div>
 					<div class="col-md-2 icon">
-						<a href=""><i class="fa fa-trash-o"></i></a>
+						<a href="#"><i class="fa fa-trash-o"></i></a>
 					</div>
 					<hr>
 				</div>
