--- a/prototype/index.html
+++ b/prototype/index.html
@@ -52,25 +52,24 @@
              <input type="text" />
              <label name="password">Password</label>
              <input type="password" />
-             <input type="submit" value="Login" />
+             <input type="submit" value="Register" />
  
         </div>
       </div>
     </div>
-     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-
+    
         <script src="js/jslogin.js"></script>
 
-		<div class="logo"><a href="index.html"><h1>STORM</h1></a></div>
+	<div class="logo"><a href="index.html"><h1>STORM</h1></a></div>
 		<nav class="navbar">
 	      <ul class="nav navbar-nav">
-	        <li class="active"><a href="index.html">Home</a></li>
-	        <li><a href="#">New</a></li>
-	        <li><a href="#">Hot</a></li>
-	        <li><a href="#">Clothes</a></li>
-	        <li><a href="#">Dress</a></li>
-	        <li><a href="#">Shoes</a></li>
-	        <li><a href="#">Sale</a></li>
+	        <li class="active"><a href="index.html" class="hvr-underline-from-center">Home</a></li>
+	        <li><a href="listProducts.html" class="hvr-underline-from-center">New</a></li>
+	        <li><a href="listProducts.html" class="hvr-underline-from-center">Hot</a></li>
+	        <li><a href="listProducts.html" class="hvr-underline-from-center">Clothes</a></li>
+	        <li><a href="listProducts.html" class="hvr-underline-from-center">Dress</a></li>
+	        <li><a href="listProducts.html" class="hvr-underline-from-center">Shoes</a></li>
+	        <li><a href="listProducts.html" class="hvr-underline-from-center">Sale</a></li>
 	        <li>
 	        	 <div class="form-group has-feedback">
 		            <input type="text" id="name"  placeholder="Search..." class="form-control">
@@ -130,22 +129,22 @@
 			<div class="col-md-8">
 				<div class="row"> 
 					<div class="col-md-7">
-						<a id="link-image" href=""><img class="hvr-bounce-to-right" src="img/home/type/top.jpg"></a>
+						<a id="link-image" href="listProducts.html"><img class="hvr-bounce-to-right" src="img/home/type/top.jpg"></a>
 						<button class="btn btn-default type-button">TOP</button>
 					</div>
 					<div class="col-md-5">
-						<a id="link-image" href=""><img src="img/home/type/supercheap.jpg"></a>
+						<a id="link-image" href="listProducts.html"><img src="img/home/type/supercheap.jpg"></a>
 						<button class="btn btn-default type-button">CHEAP</button>
 					
 					</div>
 				</div>
 				<div class="row play">
-					<a id="link-image" href=""><img src="img/home/type/player.jpg"></a>
+					<a id="link-image" href="listProducts.html"><img src="img/home/type/player.jpg"></a>
 					<button class="btn btn-default type-button play-button">PLAY</button>
 				</div>
 			</div>
 			<div class="col-md-4">
-				<a id="link-image" href=""><img src="img/home/type/Art.jpg"></a>
+				<a id="link-image" href="listProducts.html"><img src="img/home/type/Art.jpg"></a>
 				<button class="btn btn-default type-button">ART</button>
 			</div>
 			
