--- a/prototype/favorite.html
+++ b/prototype/favorite.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My Bag</title>
+	<title>Favorite</title>
 	<meta charset="utf-8">
   	<meta name="viewport" content="width=device-width, initial-scale=1">
   	<link rel="stylesheet" type="text/css" href="lib/bootstrap/css/bootstrap.min.css">
@@ -52,8 +52,8 @@
 				</div>
 				<div class= "link">
 					<a id="link1" href="personal.html" onclick="">Profile</a>
-					<a id="linkactive" href="Mybag.html" onclick="">My bag</a>
-					<a id="link3" href="favorite.html" onclick="">My favorite</a>
+					<a id="link2" href="Mybag.html" onclick="">My bag</a>
+					<a id="linkactive" href="favorite.html" onclick="">My favorite</a>
 				</div>
 			</div>
 			
