--- a/prototype/personal.html
+++ b/prototype/personal.html
@@ -5,8 +5,8 @@
 	<meta charset="utf-8">
   	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="lib/bootstrap/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="lib/bootstrap/css/bootstrap-theme.min.css">
 	<link rel="stylesheet" type="text/css" href="css/header.css">
+	<link rel="stylesheet" type="text/css" href="css/stylelogin.css">
 	<link rel="stylesheet" href="lib/font-awesome/css/font-awesome.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Mountains+of+Christmas' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Exo' rel='stylesheet' type='text/css'>
@@ -17,34 +17,33 @@
   	<script src="js/personal.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/personal.css">
 	<link rel="stylesheet" type="text/css" href="css/mybag.css">
+
 </head>
 <body>	
-<!-- <<<<<<< HEAD
-	
-======= -->
 	<header>
 		<div class="user">
-			<span><a href="login-signup.html" id="loginform">Login</a> | <a href="login-signup.html" id="registerform">Register</a></span>
+			<span><a href="personal.html" id="loginform">Login</a> | <a href="index.html" id="registerform">Register</a></span>
 			<a href="Mybag.html" class="hvr-icon-bounce glyphicon glyphicon-shopping-cart">
 			</a>
 		</div>
+		
 		<div class="logo"><a href="index.html"><h1>STORM</h1></a></div>
 		<nav class="navbar">
-	      <ul class="nav navbar-nav">
-	        <li class="active"><a href="index.html">Home</a></li>
-	        <li><a href="#">New</a></li>
-	        <li><a href="#">Hot</a></li>
-	        <li><a href="#">Clothes</a></li>
-	        <li><a href="#">Dress</a></li>
-	        <li><a href="#">Shoes</a></li>
-	        <li><a href="#">Sale</a></li>
-	        <li>
-	        	 <div class="form-group has-feedback">
-		            <input type="text" id="name"  placeholder="Search..." class="form-control">
-		            <span class="glyphicon glyphicon-search form-control-feedback"></span>
-       			 </div>
-	        </li>
-	      </ul>
+		      <ul class="nav navbar-nav">
+		        <li class="active"><a href="index.html" class="hvr-underline-from-center">Home</a></li>
+		        <li><a href="listProducts.html" class="hvr-underline-from-center">New</a></li>
+		        <li><a href="listProducts.html" class="hvr-underline-from-center">Hot</a></li>
+		        <li><a href="listProducts.html" class="hvr-underline-from-center">Clothes</a></li>
+		        <li><a href="listProducts.html" class="hvr-underline-from-center">Dress</a></li>
+		        <li><a href="listProducts.html" class="hvr-underline-from-center">Shoes</a></li>
+		        <li><a href="listProducts.html" class="hvr-underline-from-center">Sale</a></li>
+		        <li>
+		        	 <div class="form-group has-feedback">
+			            <input type="text" id="name"  placeholder="Search..." class="form-control">
+			            <span class="glyphicon glyphicon-search form-control-feedback"></span>
+	       			 </div>
+		        </li>
+		      </ul>
 		</nav>
 	</header>
 
@@ -58,12 +57,11 @@
 				<div class= "link">
 					<a id="linkactive" href="personal.html" onclick="">Profile</a>
 					<a id="link2" href="Mybag.html" onclick="">My bag</a>
-					<a id="link3" href="#" onclick="">My favorite</a>
-<!-- >>>>>>> origin/master -->
+					<a id="link3" href="favorite.html" onclick="">My favorite</a>
 				</div>
 			</div>
-<!-- <<<<<<< HEAD
- -->		</br></br>			
+
+	</br></br>			
 			<div class="col-md-9 infor inforprofile">
 				<div class="row">
 					<div class="col-md-3">
