--- a/prototype/order.html
+++ b/prototype/order.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="lib/bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/order.css">
 	<link rel="stylesheet" type="text/css" href="css/header.css">
+	<link rel="stylesheet" type="text/css" href="css/stylelogin.css">
 	<link rel="stylesheet" href="lib/font-awesome/css/font-awesome.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Mountains+of+Christmas' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Exo' rel='stylesheet' type='text/css'>
@@ -14,29 +15,62 @@
 	<script src="lib/bootstrap/js/bootstrap.min.js"></script>
   </head>
 <body>
-	<header>
+		<header>
 		<div class="user">
-			<span><a href="login-signup.html" id="loginform">Login</a> | <a href="login-signup.html" id="registerform">Register</a></span>
+			<span><a href="" id="loginform">Login</a> | <a href="" id="registerform">Register</a></span>
 			<a href="Mybag.html" class="hvr-icon-bounce glyphicon glyphicon-shopping-cart">
 			</a>
 		</div>
+		<!-- Login form -->
+		 <div class="login">
+		      <div class="arrow-up1"></div>
+		      <div class="formholder">
+		        <div class="randompad">
+		             <label name="username">Username</label>
+		             <input type="text"/>
+		             <label name="password">Password</label>
+		             <input type="password" />
+		             <input type="submit" value="Login" />
+        		</div>
+      		</div>
+      	</div>
+
+	      <!--Register Form -->
+	    <div class="register">
+		      <div class="arrow-up2"></div>
+		      <div class="formregister">
+		        <div class="randompad">
+		             <label name="email">Email</label>
+		             <input type="email" placeholder="example@example.com" />
+		             <label name="username">Username</label>
+		             <input type="text" />
+		             <label name="password">Password</label>
+		             <input type="password" />
+		             <input type="submit" value="Register" />
+		 
+		        </div>
+	      		</div>
+	    </div>
+	    
+	    <script src="js/jslogin.js"></script>
+
 		<div class="logo"><a href="index.html"><h1>STORM</h1></a></div>
 		<nav class="navbar">
-	      <ul class="nav navbar-nav">
-	        <li class="active"><a href="index.html">Home</a></li>
-	        <li><a href="#">New</a></li>
-	        <li><a href="#">Hot</a></li>
-	        <li><a href="#">Clothes</a></li>
-	        <li><a href="#">Dress</a></li>
-	        <li><a href="#">Shoes</a></li>
-	        <li><a href="#">Sale</a></li>
-	        <li>
-	        	 <div class="form-group has-feedback">
-		            <input type="text" id="name"  placeholder="Search..." class="form-control">
-		            <span class="glyphicon glyphicon-search form-control-feedback"></span>
-       			 </div>
-	        </li>
-	      </ul>
+		      <ul class="nav navbar-nav">
+		        <li class="active"><a href="index.html" class="hvr-underline-from-center">Home</a></li>
+		        <li><a href="listProducts.html" class="hvr-underline-from-center">New</a></li>
+		        <li><a href="listProducts.html" class="hvr-underline-from-center">Hot</a></li>
+		        <li><a href="listProducts.html" class="hvr-underline-from-center">Clothes</a></li>
+		        <li><a href="listProducts.html" class="hvr-underline-from-center">Dress</a></li>
+		        <li><a href="listProducts.html" class="hvr-underline-from-center">Shoes</a></li>
+		        <li><a href="listProducts.html" class="hvr-underline-from-center">Sale</a></li>
+		        <li>
+		        	 <div class="form-group has-feedback">
+			            <input type="text" id="name"  placeholder="Search..." class="form-control">
+			            <span class="glyphicon glyphicon-search form-control-feedback"></span>
+	       			 </div>
+		        </li>
+		      </ul>
 		</nav>
 	</header>
 
