--- a/prototype/order.html
+++ b/prototype/order.html
@@ -81,7 +81,6 @@
 					<label class = "nameOfProduct"> Wool Sweater </label>
 				</label><br>
 				<label class = "info">Color:    
-					<button type="button" class="btn btn-default btn-lg"></button>
 					<button type="button" class="btn btn-default btn-lg" style = "background-Color: #80CCFF"></button>
 					<button type="button" class="btn btn-default btn-lg" style = "background-Color:  #FFCCCC"></button>
 					<button type="button" class="btn btn-default btn-lg" style = "background-Color:  #CC99FF"></button>
@@ -117,27 +116,9 @@
 	<div class="row">
 		<div class= "col-md-6 form-group" style = "width: 35%">
 			<input type="text" class="form-control" id="email" placeholder="Your full name"><br>
-			<input type="email" class="form-control" id="pwd" placeholder="Email">
-			<p style = "font-style: italic; font-size: 16px; color: #00802b">* Storm.com confirms following that email </p>
-			<div class="col-sm-6" " >
-				<select class="form-control province"  placeholder = "Provincial/ City">
-				<option>Ha Noi</option>
-				<option>Bac Ninh</option>
-				<option>Hai Phong</option>
-				<option>Thai Binh</option>
-			  </select>
-			</div>
-			<div class="col-sm-6 ">
-				 <select class="form-control district" placeholder = "Provincial/ City">
-				<option>Cau Giay</option>
-				<option>Yen Phong</option>
-				<option>Thanh Xuan</option>
-				<option>Long Bien</option>
-			  </select>
-			</div>
-			<br><br>
-			<input type="text" class="form-control" id="pwd" placeholder="House number, neighbor, village">
-		
+			<input type="email" class="form-control" id="pwd" placeholder="Phone number"><br>
+			<input type="email" class="form-control" id="pwd" placeholder="Email"><br>
+			<input type="text" class="form-control" id="pwd" placeholder="Address">
 		</div>
 		<div class="col-md-6 form-group infor-recpi " >
 			<input type="text" class="form-control input-recpi"  placeholder="Recipient information"><br>
