update menu header

--- a/prototype/detailProduct.html
+++ b/prototype/detailProduct.html
@@ -72,12 +72,11 @@
 		<nav class="navbar">
 	      <ul class="nav navbar-nav">
 	        <li class="active"><a href="index.html">Home</a></li>
-	        <li><a href="#">New</a></li>
-	        <li><a href="#">Hot</a></li>
-	        <li><a href="#">Clothes</a></li>
-	        <li><a href="#">Dress</a></li>
-	        <li><a href="#">Shoes</a></li>
-	        <li><a href="#">Sale</a></li>
+ 			<li><a href="listProducts.html" class="hvr-underline-from-center">What's New</a></li>
+		    <li><a href="listProducts.html" class="hvr-underline-from-center">Hot</a></li>
+		    <li><a href="listProducts.html" class="hvr-underline-from-center">Sale</a></li>
+		    <li><a href="listProducts.html" class="hvr-underline-from-center">Trend</a></li>
+		    <li><a href="listProducts.html" class="hvr-underline-from-center">About Us</a></li>
 	        <li>
 	        	 <div class="form-group has-feedback">
 		            <input type="text" id="name"  placeholder="Search..." class="form-control">
