--- a/prototype/order.html
+++ b/prototype/order.html
@@ -58,12 +58,11 @@
 		<nav class="navbar">
 		      <ul class="nav navbar-nav">
 		        <li class="active"><a href="index.html" class="hvr-underline-from-center">Home</a></li>
-		        <li><a href="listProducts.html" class="hvr-underline-from-center">New</a></li>
+ 				<li><a href="listProducts.html" class="hvr-underline-from-center">What's New</a></li>
 		        <li><a href="listProducts.html" class="hvr-underline-from-center">Hot</a></li>
-		        <li><a href="listProducts.html" class="hvr-underline-from-center">Clothes</a></li>
-		        <li><a href="listProducts.html" class="hvr-underline-from-center">Dress</a></li>
-		        <li><a href="listProducts.html" class="hvr-underline-from-center">Shoes</a></li>
 		        <li><a href="listProducts.html" class="hvr-underline-from-center">Sale</a></li>
+		        <li><a href="listProducts.html" class="hvr-underline-from-center">Trend</a></li>
+		        <li><a href="listProducts.html" class="hvr-underline-from-center">About Us</a></li>
 		        <li>
 		        	 <div class="form-group has-feedback">
 			            <input type="text" id="name"  placeholder="Search..." class="form-control">
