--- a/prototype/following.html
+++ b/prototype/following.html
@@ -142,27 +142,10 @@
 						<a class="btn w3-margin-bottom" href="order.html">Buy Now</a>
 					</div>
 					<div class="col-md-2 icon">
-						<a href="#"><i class="fa fa-trash-o" data-toggle="modal" data-target="#myModal"></i></a>
+						<a href="#"><i class="fa fa-trash-o" ></i></a>
 					</div>
 					<hr>
 				</div>
-
-				<!-- <confirm delete> -->
-				 <!-- Modal -->
-				  	<div class="modal fade" id="myModal" role="dialog">
-						<div class="modal-dialog">
-						
-						  <!-- Modal content-->
-							<div class="modal-content">
-								<div class="modal-header">
-								  <button type="button" class="close" data-dismiss="modal">&times;</button>
-								   <h4 >Are you sure you want to delete the product from following list?</h4>
-								   <button type="button" class="btn btn-success" data-dismiss="modal" >Confirm</button>
-								 </div>
-							</div>
-						</div>
-					</div>
-
 			</div>				
 		</div>
 	</div>
