--- a/prototype/detailProduct.html
+++ b/prototype/detailProduct.html
@@ -66,13 +66,13 @@
 					<!-- Wrapper for slides -->
 					<div class="carousel-inner" role="listbox">
 						<div class="item active" >
-							<img src="img/details/Anh1.png">
+							<img src="img/Details/Anh1.png">
 						</div>
 						<div class="item" >
-							<img src="img/details/Anh2.png">
+							<img src="img/Details/Anh2.png">
 						</div>
 						<div class="item">
-							<img src="img/details/Anh3.png">
+							<img src="img/Details/Anh3.png">
 						</div>
 					</div>
 
@@ -188,36 +188,36 @@
 	
 	<div class="row">
 		<div class="col-md-8">
-			<img class="photodetails" src="img/details/Anh5.png">
-			<img class="photodetails" src="img/details/Anh6.png">
-			<img class="photodetails" src="img/details/Anh7.png">
+			<img class="photodetails" src="img/Details/Anh5.png">
+			<img class="photodetails" src="img/Details/Anh6.png">
+			<img class="photodetails" src="img/Details/Anh7.png">
 			<a href = "#danhgia">
 		</div>
 		<div class="col-md-4">
 			<p style="margin-left:20px" class="fontword">The same product</p>
 		      
 			<div id="wrapphoto">
-				<img class="photosame" src="img/details/same1.png">
+				<img class="photosame" src="img/Details/same1.png">
 				<p class="name">Overcoat long</p>
 			</div>
 			<div id="wrapphoto">
-				<img class="photosame" src="img/details/same2.png">
+				<img class="photosame" src="img/Details/same2.png">
 				<p class="name">Nice Overcoat Red</p>
 			</div>
 			<div id="wrapphoto">
-				<img class="photosame" src="img/details/same4.png">
+				<img class="photosame" src="img/Details/same4.png">
 				<p class="name">Leather Jacket long</p>
 			</div>
 			<div id="wrapphoto">
-				<img class="photosame" src="img/details/same5.png">
+				<img class="photosame" src="img/Details/same5.png">
 				<p class="name">Anorak long</p>
 			</div>
 			<div id="wrapphoto">
-				<img class="photosame" src="img/details/same6.png">
+				<img class="photosame" src="img/Details/same6.png">
 				<p class="name">Nice Overcoat Red </p>
 			</div>
 			<div id="wrapphoto">
-				<img class="photosame" src="img/details/same11.png">
+				<img class="photosame" src="img/Details/same11.png">
 				<p class="name">Leather Jacket</p>
 			</div>
 			
