--- a/prototype/detailProduct.html
+++ b/prototype/detailProduct.html
@@ -46,7 +46,7 @@
 	<div id="main">
 		
 	
-		 <b class="bar" >Home</b></a> <b class="bar"> > </b><b class="bar">Jacket</b></a>
+		 <b class="bar" style="padding-left:20px" >Home</b></a> <b class="bar"> > </b><b class="bar">Jacket</b></a>
 		<br style="margin-top: 20px">
 		<p style="padding-top:20px"></p>
 		<div class="container-fluid">
@@ -115,7 +115,7 @@
 			</div>
 			<div class="col-sm-3" >
 				<p class="fontwordfirst">Overcoat</p>
-				<p class="money"> $50</p>
+				<p class="fontword"> $50</p>
 				<p class="fontword"> Status: Sold out </p>
 				<p class="fontword"> 126 people bought</p>
 				<p class="icon-add">
@@ -194,7 +194,7 @@
 			<a href = "#danhgia">
 		</div>
 		<div class="col-md-4">
-			<p style="margin-left:20px" class="fontword">The same product</p>
+			<p style="margin-left:15px" class="fontword">The same product</p>
 		      
 			<div id="wrapphoto">
 				<img class="photosame" src="img/Details/same1.png">
